ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/Fleet_Details__c.object-meta.xml
<CustomObject>
    <label>Fleet Detail</label>
    <nameField>
        <label>Fleet Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>