ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <label>Asset Name</label>
    <type>TextArea</type>
</CustomField>