ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tractor</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicle</fullName>
            </value>
            <value>
                <fullName>Construction Equipment</fullName>
            </value>
            <value>
                <fullName>LCV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>