ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/Hypothecation__c.field-meta.xml
<CustomField>
    <fullName>Hypothecation__c</fullName>
    <label>Hypothecation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>