ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <type>TextArea</type>
</CustomField>