ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/RC_no__c.field-meta.xml
<CustomField>
    <fullName>RC_no__c</fullName>
    <label>RC no</label>
    <type>TextArea</type>
</CustomField>