ProdIND/ProdPrograms/force-app/main/default/objects/Fleet_Details__c/fields/YOM__c.field-meta.xml
<CustomField>
    <fullName>YOM__c</fullName>
    <label>YOM</label>
    <type>TextArea</type>
</CustomField>